samples/_failures_safe/1761299089_a24e97_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5193e038.c: In function ‘main’:
./samples/SAFE/__tmp_5193e038.c:138:5: error: expected expression at end of input
  138 |     if (scanf("%u", &params.block_size) != 1)
      |     ^~
./samples/SAFE/__tmp_5193e038.c:138:5: error: expected declaration or statement at end of input
